--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0"
   },
