--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "@types/uuid": "^9.0.8",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.0"
   }
 }
