--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^9.0.8",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
