Done for quiz functionality

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^9.0.8",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.5",
