--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
