--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc -b && node dist/src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:docker": "npm run prisma:docker && npm run dev",
+    "prisma:docker": "npx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
